// Copyright 2021 Ewout Prangsma
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// Author Ewout Prangsma
//

syntax = "proto3";

package binkyrailways.v1;

option go_package = "github.com/binkyrailways/BinkyRailways/pkg/api/v1";

import "br_model_types.proto";

// Railway contrains a description of a single model railway.
message RailwayState {
  // Model of the railway
  Railway model = 1;
  // Set when the server is in run mode (otherwise editing mode)
  bool is_run_mode_enabled = 2;
  // Set when the server is in run mode with virtual mode enabled
  bool is_virtual_mode_enabled = 3;
}
